--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <script type="text/JavaScript" src="https://www.kayak.com/affiliate/widget-v2.js"></script>
   <title>Restaurant Reviews</title>
 </head>
+
+
+
 
 <body>
   <header>
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
+
+    <div id="kayakSearchWidgetContainer" style="width: 500px; height: 80px;"></div> 
   </header>
+
+
 
   <main id="maincontent">
     <section id="map-container">
