--- a/restaurant.html
+++ b/restaurant.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang= en>
-
-<head>
+<html lang="en">
+ <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -15,22 +16,23 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="https://bettinasde.github.io/RestaurantApp/">Restaurant Reviews</a></h1>
     </nav>
-    <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
-    <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
   <!-- End header -->
+    <!-- Beginning breadcrumb -->
+    <ul id="breadcrumb" role="application" aria-label="map">
+      <li><a href="https://bettinasde.github.io/RestaurantApp/">Home</a></li>
+    </ul>
+    <!-- End breadcrumb -->
+   
 
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="presentation"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
@@ -52,7 +54,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2018 <a href="https://bettinasde.github.io/RestaurantApp/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
