add serviceworker (sw.js) link to html file

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/sw.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHsLCw54QWY4hi67Ifyo1kwBTzouKx2mQ&libraries=places&callback=initMap"></script> 
 
 
