link to Service worker script sw.js

--- a/restaurant.html
+++ b/restaurant.html
@@ -64,6 +64,8 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
+  <script type="application/javascript" charset="utf-8" src="js/sw.js"></script>
+  <!--link to script for Service Worker sw.js -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHsLCw54QWY4hi67Ifyo1kwBTzouKx2mQ&libraries=places&callback=initMap"></script> 
   <!-- End scripts -->
 
