--- a/restaurant.html
+++ b/restaurant.html
@@ -29,7 +29,7 @@
    
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" tabindex="1">
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map" role="presentation"></div>
